main/default/objects/Agile_RAID__c/Agile_RAID__c.object-meta.xml
<CustomObject>
    <label>Agile RAID</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>RAID ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agile RAIDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>