main/default/objects/Agile_RAID__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agile RAIDs (Assigned To)</relationshipLabel>
    <relationshipName>Agile_RAIDs1</relationshipName>
    <type>Lookup</type>
</CustomField>