main/default/objects/Agile_RAID__c/fields/CAPM_Project__c.field-meta.xml
<CustomField>
    <fullName>CAPM_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAPM Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Agile RAIDs</relationshipLabel>
    <relationshipName>Agile_RAIDs_del</relationshipName>
    <type>Lookup</type>
</CustomField>