main/default/objects/Agile_RAID__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compass Change Navigator</fullName>
            </value>
            <value>
                <fullName>Compass Change Capture</fullName>
            </value>
            <value>
                <fullName>GiveBackRX</fullName>
            </value>
            <value>
                <fullName>Compass Connect</fullName>
            </value>
            <value>
                <fullName>Compass HR</fullName>
            </value>
            <value>
                <fullName>Compass Insights</fullName>
            </value>
            <value>
                <fullName>Compass PM</fullName>
            </value>
            <value>
                <fullName>Compass Agile PM</fullName>
            </value>
            <value>
                <fullName>Compass Learning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>