main/default/objects/Agile_RAID__c/fields/Date_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Date_Escalated__c</fullName>
    <label>Date Escalated</label>
    <type>Date</type>
</CustomField>