main/default/objects/Agile_RAID__c/fields/Date_Last_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Received__c</fullName>
    <label>Date Last Received</label>
    <type>Date</type>
</CustomField>