main/default/objects/Agile_RAID__c/fields/Description_of_Anticipated_Impact__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Anticipated_Impact__c</fullName>
    <label>Description of Anticipated Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>