main/default/objects/Agile_RAID__c/fields/Description_of_Resolution_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Resolution_Achieved__c</fullName>
    <label>Description of Resolution Achieved</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>