main/default/objects/Agile_RAID__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Epic</label>
    <referenceTo>Epic__c</referenceTo>
    <relationshipLabel>Agile RAIDs</relationshipLabel>
    <relationshipName>RAIDs</relationshipName>
    <type>Lookup</type>
</CustomField>