main/default/objects/Agile_RAID__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feature</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Task__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Feature</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipName>RAIDs</relationshipName>
    <type>Lookup</type>
</CustomField>