main/default/objects/Agile_RAID__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <inlineHelpText>1. Very little impact on the project.
2. Impact will have small change in the project outcome.
3. Event will cause some impact to the project; project can be completed with minimal budget, schedule changes, etc.
4. An event will have a major impact to the project; can complete project but may be over budget, schedule, etc.
5. Very high impact including financial loss, personal injury, termination of contract, loss of client, etc.</inlineHelpText>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>