main/default/objects/Agile_RAID__c/fields/Impacted_Stakeholders_by_Organization__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Stakeholders_by_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Impacted Stakeholders (by Organization)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Agile_RAIDs</relationshipName>
    <type>Lookup</type>
</CustomField>