main/default/objects/Agile_RAID__c/fields/Internal_or_External__c.field-meta.xml
<CustomField>
    <fullName>Internal_or_External__c</fullName>
    <label>Internal or External</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>