main/default/objects/Agile_RAID__c/fields/Project_Team_Plans_to_Share__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Plans_to_Share__c</fullName>
    <label>Project Team Plans to Share</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>