main/default/objects/Agile_RAID__c/fields/ProjectTask__c.field-meta.xml
<CustomField>
    <fullName>ProjectTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Agile RAIDs (Project Task)</relationshipLabel>
    <relationshipName>Agile_RAIDs</relationshipName>
    <type>Lookup</type>
</CustomField>