main/default/objects/Agile_RAID__c/fields/Proposed_Mitigation_or_Resolution_Strat__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Mitigation_or_Resolution_Strat__c</fullName>
    <label>Proposed Mitigation or Resolution Strat</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>