main/default/objects/Agile_RAID__c/fields/Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Raised_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raised By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Agile_RAIDs</relationshipName>
    <type>Lookup</type>
</CustomField>