main/default/objects/Agile_RAID__c/fields/Raised_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Raised_By_Email__c</fullName>
    <label>Raised By Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>