main/default/objects/Agile_RAID__c/fields/Rationale_For_Priority__c.field-meta.xml
<CustomField>
    <fullName>Rationale_For_Priority__c</fullName>
    <label>Rationale For Priority</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>