main/default/objects/Agile_RAID__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>