main/default/objects/Agile_RAID__c/fields/Target_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Resolution_Date__c</fullName>
    <label>Target Resolution Date</label>
    <type>Date</type>
</CustomField>