main/default/objects/Agile_RAID__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requirement</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Assumption</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Idea</fullName>
            </value>
            <value>
                <fullName>Dependency</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Decision-Made</fullName>
                <isActive>false</isActive>
                <label>Decision-Made</label>
            </value>
            <value>
                <fullName>Decision-Pending</fullName>
                <isActive>false</isActive>
                <label>Decision-Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>