main/default/objects/Agile_RAID__c/fields/Vote_Count__c.field-meta.xml
<CustomField>
    <fullName>Vote_Count__c</fullName>
    <label>Vote Count</label>
    <summaryForeignKey>Idea_Vote__c.Agile_RAID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>