main/default/objects/Agile_RAID__c/validationRules/Add_Resolution.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Resolution</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&apos;Adressed&apos;),
ISBLANK(Resolution__c))</errorConditionFormula>
    <errorDisplayField>Resolution__c</errorDisplayField>
    <errorMessage>Add a value</errorMessage>
</ValidationRule>