main/default/objects/Agile_RAID__c/listViews/DC.listView-meta.xml
<ListView>
    <fullName>DC</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>CAPM_Project__c</columns>
    <columns>Description__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Date_Raised__c</columns>
    <columns>Target_Resolution_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAPM_Project__c</field>
        <operation>contains</operation>
        <value>dc</value>
    </filters>
    <label>DC Gov DBH Laboratory Services Raid Logs</label>
</ListView>