main/default/objects/Agile_RAID__c/listViews/My_Agile_RAIDs.listView-meta.xml
<ListView>
    <fullName>My_Agile_RAIDs</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Comments__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Agile RAIDs</label>
</ListView>