main/default/objects/Agile_RAID__c/listViews/My_Open_Agile_RAIDs.listView-meta.xml
<ListView>
    <fullName>My_Open_Agile_RAIDs</fullName>
    <columns>CAPM_Project__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Addressed</value>
    </filters>
    <label>My Open Agile RAIDs</label>
</ListView>