main/default/objects/Agile_RAID__c/listViews/Oracle_Cerner_RAID_Logs.listView-meta.xml
<ListView>
    <fullName>Oracle_Cerner_RAID_Logs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>Resolution__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAPM_Project__c</field>
        <operation>contains</operation>
        <value>Oracle</value>
    </filters>
    <label>Oracle Cerner RAID Logs</label>
</ListView>