main/default/objects/Agile_RAID__c/listViews/Provider_Remote_Support_RAID_Logs.listView-meta.xml
<ListView>
    <fullName>Provider_Remote_Support_RAID_Logs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>Resolution__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Date_Raised__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAPM_Project__c</field>
        <operation>contains</operation>
        <value>Provider</value>
    </filters>
    <label>Provider Remote Support RAID Logs</label>
</ListView>