main/default/objects/Agile_RAID__c/listViews/Workforce_3_0_RAID_Logs.listView-meta.xml
<ListView>
    <fullName>Workforce_3_0_RAID_Logs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>Resolution__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAPM_Project__c</field>
        <operation>equals</operation>
        <value>Workforce 3.0</value>
    </filters>
    <label>Workforce 3.0 RAID Logs</label>
</ListView>